@@ -684,7 +684,7 @@ class CustomCodeView extends javax.swing.JPanel {
             Integer lastLineCount = lastDocLineCounts.get(doc);
             int lineCount = getLineCount(doc);
             if (lastLineCount == null || lastLineCount.intValue() != lineCount) {
-                lastDocLineCounts.put(doc, new Integer(lineCount));
+                lastDocLineCounts.put(doc, Integer.valueOf(lineCount));
                 updateLines(doc, blockBounds[0], blockBounds[1], lines,
                             codeData.getEditableBlock(category, eBlockIndex));
                 repaint = true;
